# policydesk-langgraph-evals

./: .env.example  .gitignore  LICENSE  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  graph.py  paths.py  reasoner.py  run.py  state.py
app/agents/: __init__.py  intake.py  order.py  planner.py  policy.py  risk.py  writer.py
app/data/: orders.json
app/data/policies/: identity_verification.md  refunds.md  shipping.md
app/tools/: __init__.py  approval.py  order_lookup.py  policy_search.py  refund.py  ticketing.py
docs/: architecture.md  design_notes.md  eval_methodology.md  threat_model.md
evals/: __init__.py  cases.yaml  evaluators.py  run_evals.py
evals/golden_traces/: damaged_order_refund.json  double_charge_escalation.json
tests/: test_evals.py  test_graph_routes.py  test_tools.py
